# zeda

./: .gitignore  Cargo.toml
src/: add_candidate.rs  candidate.rs  constant.rs  main.rs  update_candidate.rs
templates/: add.stpl  home.stpl  navbar.stpl  update.stpl
