[package]
name = "zedality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-files = "0.6.2"
sailfish = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
